--- a/src/app/role-select/role-select.component.css
+++ b/src/app/role-select/role-select.component.css
@@ -13,7 +13,17 @@
 
 .btn:hover {
   transform: translateY(-2px);
-  box-shadow: 0 4px 8px rgba(0, 190, 87, 0.3);
+  box-shadow: 0 4px 8px rgba(36, 64, 52, 0.3);
+}
+
+.form-check-input:checked {
+  background-color: #244034;
+  border-color: #244034;
+}
+
+.form-check-input:focus {
+  border-color: #244034;
+  box-shadow: 0 0 0 0.25rem rgba(36, 64, 52, 0.25);
 }
 
 @media (max-width: 576px) {
