--- a/src/app/features/dashboard/seeker/components/dashboard-home/dashboard-home.component.html
+++ b/src/app/features/dashboard/seeker/components/dashboard-home/dashboard-home.component.html
@@ -136,6 +136,9 @@
                         <div class="job-location">{{ application.employment_type | capitalizeFirst }} . {{
                             application.location }}</div>
                     </div>
+                    <div class="mt-3 mt-md-0 me-lg-2 status-badge" [style.background-color]="getStatusColor(application.status) + '20'" [style.color]="getStatusColor(application.status)">
+                        {{ application.status | capitalizeFirst }}
+                    </div>
                     <!-- Dropdown Menu -->
                     <div class="dropdown">
                         <button class="btn btn-link job-menu" type="button" id="dropdownMenuButton{{ application.application_id }}"
