--- a/src/app/features/dashboard/seeker/components/applied-jobs/applied-jobs.component.css
+++ b/src/app/features/dashboard/seeker/components/applied-jobs/applied-jobs.component.css
@@ -98,6 +98,11 @@
   color: #4b5563;
 }
 
+.dropdown-item {
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+}
+
 /* Pagination */
 .pagination-container {
   display: flex;
