--- a/src/app/features/dashboard/seeker/components/dashboard-home/dashboard-home.component.html
+++ b/src/app/features/dashboard/seeker/components/dashboard-home/dashboard-home.component.html
@@ -84,7 +84,9 @@
         <div class="jobs-section">
             <div class="section-header">
                 <h2>Recently Applied Jobs</h2>
-                <a routerLink="/dashboard/jobseeker/applied-jobs" class="btn btn-link text-decoration-none p-0" style="color: #244034; font-weight: 600; font-size: 0.9rem;">
+                <a routerLink="/dashboard/jobseeker/applied-jobs"
+                    class="btn btn-link text-decoration-none p-0 d-none d-lg-block"
+                    style="color: #244034; font-weight: 600; font-size: 0.9rem;">
                     View All <i class="fas fa-arrow-right ms-1"></i>
                 </a>
             </div>
@@ -139,23 +141,34 @@
                     <div class="job-info">
                         <div class="job-title">{{ application.title }}</div>
                         <div class="job-location">{{ application.employment_type | capitalizeFirst }} . {{
-                            application.location }}</div>
+                            application.location }} . Applied {{ application.applied_at | relativeTime }}</div>
                     </div>
-                    <div class="mt-3 mt-md-0 me-lg-2 status-badge" [style.background-color]="getStatusColor(application.status) + '20'" [style.color]="getStatusColor(application.status)">
+                    <div class="mt-3 mt-md-0 me-lg-2 status-badge"
+                        [style.background-color]="getStatusColor(application.status) + '20'"
+                        [style.color]="getStatusColor(application.status)">
                         {{ application.status | capitalizeFirst }}
                     </div>
                     <!-- Dropdown Menu -->
                     <div class="dropdown">
-                        <button class="btn btn-link job-menu" type="button" id="dropdownMenuButton{{ application.application_id }}"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn btn-link job-menu" type="button"
+                            id="dropdownMenuButton{{ application.application_id }}" data-bs-toggle="dropdown"
+                            aria-expanded="false">
                             <i class="fas fa-ellipsis-h"></i>
                         </button>
-                        <ul class="dropdown-menu" [attr.aria-labelledby]="'dropdownMenuButton' + application.application_id">
+                        <ul class="dropdown-menu"
+                            [attr.aria-labelledby]="'dropdownMenuButton' + application.application_id">
                             <li><a class="dropdown-item" (click)="viewJob(application)">View Job</a></li>
                             <li><a class="dropdown-item text-danger"
                                     (click)="retractApplication(application)">Retract</a></li>
                         </ul>
                     </div>
+                </div>
+
+                <div style="text-align: center;" class="d-block d-lg-none">
+                    <a routerLink="/dashboard/jobseeker/applied-jobs" class="btn btn-link text-decoration-none p-0"
+                        style="color: #244034; font-weight: 600; font-size: 0.9rem;">
+                        View All <i class="fas fa-arrow-right ms-1"></i>
+                    </a>
                 </div>
 
                 <!-- Polished Empty State -->
