feat(navbar): update navigation links to use routerLink for better routing

--- a/src/app/shared/sections/navbar/navbar.component.html
+++ b/src/app/shared/sections/navbar/navbar.component.html
@@ -41,31 +41,22 @@
               <div class="col-md-4">
                 <strong class="text-success">Candidates</strong>
                 <ul class="list-unstyled">
-                  <li><a href="#">Candidates V-1</a></li>
-                  <li><a href="#">Candidates V-2</a></li>
-                  <li><a href="#">Candidates V-3</a></li>
-                  <li><a href="#">Candidates V-4</a></li>
-                  <li><a href="#">Candidates Details V-1</a></li>
-                  <li><a href="#">Candidates Details V-2</a></li>
+                  <li><a class="nav-link" routerLink="/candidates">Candidates</a></li>
                 </ul>
               </div>
               <div class="col-md-4">
                 <strong class="text-success">Company</strong>
                 <ul class="list-unstyled">
-                  <li><a href="#">Company V-1</a></li>
-                  <li><a href="#">Company V-2</a></li>
-                  <li><a href="#">Company V-3</a></li>
-                  <li><a href="#">Company V-4</a></li>
-                  <li><a href="#">Company Details</a></li>
+                  <li><a class="nav-link" routerLink="/companies">Companies</a></li>
                 </ul>
               </div>
               <div class="col-md-4">
                 <strong class="text-success">Essential</strong>
                 <ul class="list-unstyled">
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Pricing</a></li>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">Register</a></li>
+                  <li><a class="nav-link" routerLink="/about-us">About Us</a></li>
+                  <li><a class="nav-link" routerLink="/pricing">Pricing</a></li>
+                  <li><a class="nav-link" routerLink="/faq">FAQ</a></li>
+                  <li><a class="nav-link" routerLink="/signup">Register</a></li>
                 </ul>
               </div>
             </div>
@@ -118,33 +109,24 @@
             <div>
               <strong class="text-success">Candidates</strong>
               <ul class="list-unstyled ps-3 mb-3">
-                <li><a class="nav-link" href="#" routerLink="/explore" routerLinkActive="active">Candidates V-1</a></li>
-                <li><a class="nav-link" href="#">Candidates V-2</a></li>
-                <li><a class="nav-link" href="#">Candidates V-3</a></li>
-                <li><a class="nav-link" href="#">Candidates V-4</a></li>
-                <li><a class="nav-link" href="#">Candidates Details V-1</a></li>
-                <li><a class="nav-link" href="#">Candidates Details V-2</a></li>
+                <li><a class="nav-link" routerLink="/candidates">Candidates</a></li>
               </ul>
             </div>
 
             <div>
               <strong class="text-success">Company</strong>
               <ul class="list-unstyled ps-3 mb-3">
-                <li><a class="nav-link" href="#">Company V-1</a></li>
-                <li><a class="nav-link" href="#">Company V-2</a></li>
-                <li><a class="nav-link" href="#">Company V-3</a></li>
-                <li><a class="nav-link" href="#">Company V-4</a></li>
-                <li><a class="nav-link" href="#">Company Details</a></li>
+                <li><a class="nav-link" routerLink="/companies">Companies</a></li>
               </ul>
             </div>
 
             <div>
               <strong class="text-success">Essential</strong>
               <ul class="list-unstyled ps-3">
-                <li><a class="nav-link" href="#">About Us</a></li>
-                <li><a class="nav-link" href="#">Pricing</a></li>
-                <li><a class="nav-link" href="#">FAQ</a></li>
-                <li><a class="nav-link" href="#">Register</a></li>
+                <li><a class="nav-link" routerLink="/about-us">About Us</a></li>
+                <li><a class="nav-link" routerLink="/pricing">Pricing</a></li>
+                <li><a class="nav-link" routerLink="/faq">FAQ</a></li>
+                <li><a class="nav-link" routerLink="/signup">Register</a></li>
               </ul>
             </div>
           </div>
